final/k8s/tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    app: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: 058264360223.dkr.ecr.ap-northeast-2.amazonaws.com/jenkins-ecr:67
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
